Changed layout of the view listing release notes. Fixed if loop that checks if the release notes has been updated, if not doesnt print any name for the item.
Also changed the navbar button named "test" to list releasenotes

--- a/ReleaseNotes/wwwroot/css/site.css
+++ b/ReleaseNotes/wwwroot/css/site.css
@@ -70,6 +70,6 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-#productCard {
-
+#listReleaseNotesh1 {
+    font-weight: bold;
 }
